1.2557: fix `.sidebar .sidebar-body` overflow on mobile

--- a/css/styl/2.0.styl
+++ b/css/styl/2.0.styl
@@ -572,6 +572,7 @@ textarea.t-redactor-comments
 
 .sidebar .sidebar-body
   height 100%
+  overflow-y auto
 
 .ui-autocomplete
   li.ui-menu-item
